# 3D_Defect_Models

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: AEDigits.pt  AEFashion.pt  DCGAN_g_capsules.pth  vae_UTKFace.pth  vae_glasses.pth
models/sd_lora_casting/: adapter_config.json
models/sd_lora_casting_v2/: adapter_config.json
notebooks/: 1.autoencoders.ipynb  11.vae_casting.ipynb  12.cycleGAN_casting.ipynb  13.CVAE_GAN_optuna.ipynb  13.VAE_GAN.ipynb  14.CVAE_GAN_ResNetBlocks.ipynb  15.CVAE_GAN_GoogleNet.ipynb  16.CVAE_GAN_ACGAN.ipynb  17.CVAE_GAN_Xception.ipynb  18_stable_diffusion.ipynb  2.autoencoders_act_4p1.ipynb  3.download_glasses_dataset_act_4p2.ipynb  3.varitional_autoencoders_act_4p2.ipynb  4.varitional_autoencoders_act_4p3_and_4p4.ipynb  create_dataset_SD.py
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/5fec7280ac4345b98caecd4bcd6943e1/: meta.yaml
notebooks/mlruns/0/76304f160a9242f5b323df594ad4e976/: meta.yaml
notebooks/mlruns/0/8c5373c72dec42a481fe115f7dbef2d2/: meta.yaml
notebooks/mlruns/342282152413126156/: meta.yaml
notebooks/mlruns/342282152413126156/bb078f24a8ba4542845cb530749d746e/: meta.yaml
notebooks/mlruns/342282152413126156/d3ccf8a402be4c969fb027144ed35e87/: meta.yaml
notebooks/mlruns/623007146142380676/: meta.yaml
notebooks/mlruns/623007146142380676/9cdcb4585d734b54a62b1f299143434a/: meta.yaml
notebooks/mlruns/764534654114031155/: meta.yaml
notebooks/mlruns/908657378261666314/: meta.yaml
notebooks/mlruns/913916633853888733/: meta.yaml
(+403 files in other folders)
