[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "togProject"
version = "0.0.1"
description = "This is the repository for the TOG project about synthetic generation of defects of 3D models using GANs or Stable Diffusion ML models"
authors = [
  { name = "StevoAngel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.11.9"


[tool.ruff]
line-length = 99
src = ["togProject"]
include = ["pyproject.toml", "togProject/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["togProject"]
force-sort-within-sections = true

